--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,16 @@ description = "Scripts for create DDS repositories programmatically"
 authors = ["vector-of-bool <vectorofbool@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
-typing-extensions = "^3.7.4"
+python = "^3.7"
+typing-extensions = "^4.1.1"
 semver = "^2.13.0"
 json5 = "^0.9.5"
 aiohttp = "^3.7.4"
+dagon = "^0.9.2"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.7.2"
-mypy = "^0.812"
+mypy = "^0.931"
 rope = "^0.18.0"
 yapf = "^0.31.0"
 
