--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@
 
 variables:
   shouldDeploy: >-
-    ${{ eq(variables['Build.SourceBranch'], 'refs/heads/feature/crs-repo') }}
+    ${{ eq(variables['Build.SourceBranch'], 'refs/heads/master') }}
 
 jobs:
   - job: main_job
