--- a/.github/workflows/build-publish-repo.yml
+++ b/.github/workflows/build-publish-repo.yml
@@ -36,7 +36,7 @@ jobs:
           if-no-files-found: error
 
   deploy:
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/feature/gh-workflow'
+    # if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/feature/gh-workflow'
     runs-on: ubuntu-20.04
     environment: repo-3.bpt.pizza
     needs: [build]
