TOML is required for yapf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pylint = "^2.7.2"
 mypy = "^0.931"
 rope = "^0.18.0"
 yapf = "^0.31.0"
+toml = "^0.10.2"
 
 [tool.poetry.scripts]
 dds-ports-mkrepo = "dds_ports.main:start"
