--- a/.github/workflows/build-publish-repo.yml
+++ b/.github/workflows/build-publish-repo.yml
@@ -27,6 +27,7 @@ jobs:
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          poetry run make wget-repo-db
           poetry run make -j4 prepare-repo precheck
       - name: Save the Repository
         uses: actions/upload-artifact@v3
@@ -36,7 +37,7 @@ jobs:
           if-no-files-found: error
 
   deploy:
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/feature/gh-workflow'
+    if: github.ref == 'refs/heads/master'
     name: Publish Repository
     runs-on: ubuntu-20.04
     environment: repo-3.bpt.pizza
